namespace Ingredients.DTO;



public record IngredientDto(string Id, string Name, double CarbohydratesInGram, double FatsInGram, double ProteinsInGram);

